<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:layout_editor_absoluteX="-16dp"
        tools:layout_editor_absoluteY="92dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_first"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/ti_name"
                    app:layout_constraintBaseline_toBaselineOf="@+id/ti_flag"
                    app:layout_constraintEnd_toStartOf="@+id/ti_flag"
                    app:layout_constraintStart_toStartOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_name"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:inputType="text"
                        android:ems="12"
                        android:textSize="12sp"
                        android:hint="@string/hint_name"
                        android:singleLine="true"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginStart="3dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/ti_flag"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ti_name">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_icon"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:ems="6"
                        android:textSize="12sp"
                        android:inputType="text"
                        android:hint="@string/hint_flag"
                        android:singleLine="true"/>

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ti_info"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cl_first">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textSize="12sp"
                    android:id="@+id/et_info"
                    android:hint="@string/hint_info"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_title_dns_configuration"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_dnstt_configuration"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ti_info" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_second"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_dns_configuration">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/ti_host"
                    app:layout_constraintBaseline_toBaselineOf="@+id/ti_openssh"
                    app:layout_constraintEnd_toStartOf="@+id/ti_openssh"
                    app:layout_constraintStart_toStartOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_host"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:inputType="text"
                        android:ems="12"
                        android:textSize="12sp"
                        android:hint="@string/hint_address"
                        android:singleLine="true"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginStart="3dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/ti_openssh"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ti_host">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_openssh"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:ems="6"
                        android:textSize="12sp"
                        android:inputType="text"
                        android:hint="@string/hint_openssh"
                        android:singleLine="true"/>

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_third"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cl_second">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/ti_dropbear"
                    app:layout_constraintBaseline_toBaselineOf="@+id/ti_stunnel"
                    app:layout_constraintEnd_toStartOf="@+id/ti_stunnel"
                    app:layout_constraintStart_toStartOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_dropbear"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:inputType="text"
                        android:ems="12"
                        android:textSize="12sp"
                        android:hint="@string/hint_dropbear"
                        android:singleLine="true"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginStart="3dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/ti_stunnel"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ti_dropbear">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_stunnel"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:ems="6"
                        android:textSize="12sp"
                        android:inputType="text"
                        android:hint="@string/hint_flag"
                        android:singleLine="true"/>

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ti_pub_key"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cl_third">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textSize="12sp"
                    android:id="@+id/et_pub_key"
                    android:hint="@string/hint_public_key"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ti_name_server"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ti_pub_key">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:textSize="12sp"
                    android:id="@+id/et_name_server"
                    android:hint="@string/hint_name_server"/>

            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:id="@+id/tv_title_auth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/title_authentication"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ti_name_server" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cl_four"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_title_auth">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/ti_username"
                    app:layout_constraintBaseline_toBaselineOf="@+id/ti_password"
                    app:layout_constraintEnd_toStartOf="@+id/ti_password"
                    app:layout_constraintStart_toStartOf="parent">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_username"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:inputType="text"
                        android:ems="12"
                        android:textSize="12sp"
                        android:hint="@string/hint_username"
                        android:singleLine="true"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_marginStart="3dp"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:id="@+id/ti_password"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toEndOf="@+id/ti_username">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/et_password"
                        android:layout_height="wrap_content"
                        android:layout_width="match_parent"
                        android:ems="6"
                        android:textSize="12sp"
                        android:inputType="text"
                        android:hint="@string/hint_password"
                        android:singleLine="true"/>

                </com.google.android.material.textfield.TextInputLayout>

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>